# aidoku-community-sources

./: .gitignore  LICENSE-MIT  README.md  index.json  index.min.json  rustfmt.toml
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  pull_request_template.md
.github/workflows/: build.yaml  clippy.yaml  pr.yaml
.github/workflows/supporting/: annotations.jq  summary.jq
lib/c/include/: aidoku.h  env.h  html.h  json.h  net.h  std.h  walloc.h  wasm.h
lib/c/lib/: walloc.c
sources/: ar.aasq-v1.aix  ar.aresmanga-v6.aix  ar.aresmanga-v7.aix  ar.azoramanga-v1.aix  ar.mangasol-v3.aix  ar.onma-v1.aix  ar.ozulscans-v4.aix  ar.reaperscansar-v2.aix  ar.swatmanga-v5.aix  ar.swatmanga-v6.aix  bg.utsukushii-v1.aix  en.acescans-v3.aix  en.alphascans-v1.aix  en.anigliscans-v2.aix  en.arcrelight-v3.aix  en.assortedscans-v4.aix  en.astrascans-v1.aix  en.asurascans-v7.aix  en.asurascans-v8.aix  en.coloredmanga-v10.aix  en.coloredmanga-v11.aix  en.coloredmanga-v3.aix  en.comiconlinefree-v1.aix  en.cosmicscans-v5.aix  en.dankefurslesen-v1.aix  en.disasterscans-v3.aix  en.dynastyscans-v1.aix  en.dynastyscans-v2.aix  en.dynastyscans-v3.aix  en.fallen-angels-v1.aix  en.firescans-v1.aix  en.firstkissmanga-v4.aix  en.firstkissmanga-v5.aix  en.flamecomics-v2.aix  en.freakscans-v2.aix  en.galaxydegenscans-v1.aix  en.guya-v1.aix  en.hachirumi-v1.aix  en.harimanga-v1.aix  en.harimanga-v2.aix  (+275 more)
src/as/en.mangafox/: package-lock.json  package.json
src/as/es.tumangaonline/: asconfig.json  package-lock.json  package.json  tsconfig.json
src/as/vi.hentaivn/: asconfig.json  package-lock.json  package.json  tsconfig.json
src/as/zh.manhuagui/: Dockerfile  asconfig.json  docker-compose.yml  jest.config.js  package-lock.json  package.json  tsconfig.json
src/c/en.tcbscans/: Makefile
src/rust/en.asurascans/: Cargo.toml  build.ps1
src/rust/en.dynastyscans/: Cargo.toml
src/rust/en.hentai2read/: Cargo.toml  build.sh
src/rust/en.hentaifox/: Cargo.toml
src/rust/en.koushoku/: .prettierrc  Cargo.toml  build.sh
src/rust/en.mangabat/: Cargo.toml
src/rust/en.mangademon/: Cargo.toml  build.ps1
src/rust/en.mangafox/: Cargo.toml
src/rust/en.mangairo/: Cargo.toml  build.ps1
src/rust/en.mangakatana/: Cargo.toml  build.ps1
src/rust/en.mangamonks/: Cargo.toml  build.sh
src/rust/en.mangapill/: Cargo.toml  package-lock.json
src/rust/en.nana/: Cargo.toml  dev.sh
src/rust/en.nepnep/: Cargo.toml
src/rust/en.nepnep/res/: filters.json  settings.json  source.json
src/rust/en.nepnep/src/: helper.rs  lib.rs  parser.rs
src/rust/en.nepnep/src/model/: mod.rs
src/rust/en.omegascans/: Cargo.toml
src/rust/en.questionablecontent/: Cargo.toml  build.ps1
src/rust/en.readm/: Cargo.toml  build.sh
src/rust/en.reaperscans/: Cargo.toml  build.ps1
src/rust/en.tcbscans/: Cargo.toml
src/rust/en.tsumino/: Cargo.toml  build.ps1
src/rust/en.webtoon/: Cargo.toml
src/rust/en.webtoonxyz/: Cargo.toml
src/rust/en.weebcentral/: Cargo.toml
src/rust/en.zeroscans/: Cargo.toml  build.ps1
src/rust/es.mangaoni/: Cargo.toml
src/rust/es.tumangaonline/: Cargo.toml
src/rust/fr.bluesolo/: Cargo.toml  build.ps1
src/rust/fr.lecercleduscan/: Cargo.toml  build.ps1
src/rust/guya/: build.ps1
src/rust/id.shinigami/: Cargo.toml  build.ps1
src/rust/id.shinigami/res/: source.json
src/rust/id.shinigami/src/: helpers.rs  lib.rs
src/rust/it.lupiteam/: build.ps1  lupiteam.aix
src/rust/ja.rawdevart/: Cargo.toml
src/rust/ja.senmanga/: Cargo.toml
src/rust/madara/: build.sh
src/rust/madara/sources/firstkissmanga/: Cargo.toml
src/rust/madara/sources/firstkissmanga/res/: filters.json  source.json
src/rust/madara/sources/firstkissmanga/src/: lib.rs
src/rust/madtheme/: build.ps1  build.sh  maintainers.md
src/rust/mangabox/: build.sh  mangabat.aix  manganato.aix
src/rust/mangadventure/: build.sh
src/rust/mangastream/: build.sh
src/rust/mmrcms/: Cargo.toml
src/rust/multi.bato/: Cargo.toml
src/rust/multi.batoto/: Cargo.toml
src/rust/multi.batoto/res/: settings.json  source.json
src/rust/multi.batoto/src/: crypto.rs  evpkdf.rs  lib.rs  parser.rs  substring.rs
src/rust/multi.comick/: Cargo.toml  build.sh
src/rust/multi.faccina/: Cargo.toml
src/rust/multi.komga/: Cargo.toml  build.ps1
src/rust/multi.komga/res/: filters.json  settings.json  source.json
src/rust/multi.komga/src/: lib.rs
src/rust/multi.komga/src/dto/: mod.rs
src/rust/multi.libgroup/template/: Cargo.toml
src/rust/multi.libgroup/template/src/: helpers.rs  lib.rs  parser.rs  template.rs
src/rust/multi.mangadex/: Cargo.toml
src/rust/multi.myreadingmanga/: Cargo.toml
src/rust/multi.nhentai/: Cargo.toml  build.ps1
src/rust/multi.ninemanga/: Cargo.toml
src/rust/multi.otakusan/: Cargo.toml  build.ps1
src/rust/multi.simplyhentai/: Cargo.toml
src/rust/multi.simplyhentai/res/: filters.json  settings.json  source.json
src/rust/multi.simplyhentai/src/: helper.rs  lib.rs  parser.rs
src/rust/multi.xkcd/: Cargo.toml  (+1 more)
src/rust/ru.mangabuff/: Cargo.toml
src/rust/ru.mangabuff/res/: settings.json  source.json
src/rust/ru.mangabuff/src/: constants.rs  helpers.rs  lib.rs  parser.rs  wrappers.rs
src/rust/zh.baozimanhua/: Cargo.toml  build.ps1
src/rust/zh.baozimanhua/res/: filters.json  settings.json  source.json
src/rust/zh.baozimanhua/src/: lib.rs  parser.rs  test.json  url.rs
src/rust/zh.boylove/: Cargo.toml
src/rust/zh.boylove/_res/: filters_(full).json
src/rust/zh.boylove/res/: _filters_(full).json  filters.json  settings.json  source.json
src/rust/zh.boylove/src/: lib.rs  parser.rs  url.rs
src/rust/zh.boylove/src/helper/: mod.rs  setting.rs  url.rs
src/rust/zh.copymanga/: Cargo.toml
src/rust/zh.copymanga/res/: filters.json  settings.json  source.json
src/rust/zh.copymanga/src/: decryptor.rs  lib.rs  parser.rs  url.rs
src/rust/zh.copymanga/src/helper/: mod.rs
src/rust/zh.dmzj/: Cargo.toml  build.ps1  build.rs
src/rust/zh.dmzj/protos/: chapter_images.proto  comic_detail.proto  detail_response.proto
src/rust/zh.dmzj/res/: filters.json  source.json
src/rust/zh.dmzj/src/: helper.rs  lib.rs
(+1100 files in other folders)
