[package]
name = "batoto"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
opt-level = "s"
strip = true
lto = true

[dependencies]
aidoku = { git = "https://github.com/Aidoku/aidoku-rs", features = ["helpers"] }
aes = { version = "0.8", default-features = false }
base64 = { version = "0.13.0", default-features = false }
block-modes = { version = "0.9.0", default-features = false }
block-padding = { version = "0.3.2", default-features = false }
cbc = { version = "0.1.2", features = ["block-padding", "alloc"] }
evpkdf = { git = "https://github.com/EnoughTea/evpkdf", branch = "to_digest_0.10" }
md-5 = { version = "0.10.1", default-features = false }
digest = { version = "0.10.3", features = ["alloc"] }
chapter-recognition = { git = "https://github.com/beer-psi/chapter-recognition" }
