[package]
name = "mangabuff"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
opt-level = "s"
strip = true
lto = true

[dependencies]
aidoku = { git = "https://github.com/Aidoku/aidoku-rs", features = ["helpers"] }
const_format = "0.2.31"
itertools = { version = "0.10.5", default-features = false, features = [
    "use_alloc",
] }
