[package]
name = "boylove"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
opt-level = "s"
strip = true
lto = true

[dependencies]
aidoku = { git = "https://github.com/Aidoku/aidoku-rs", features = ["helpers"] }
base64 = { version = "0.21.2", default-features = false, features = ["alloc"] }
regex = { version = "1.10.2", default-features = false, features = ["unicode"] }
