[package]
name = "boylove"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
opt-level = "s"
strip = true
lto = true

[dependencies]
aidoku = { git = "https://github.com/Aidoku/aidoku-rs", features = ["helpers"] }
chinese-number = { version = "0.7.7", default-features = false, features = ["chinese-to-number"] }
md5 = { version = "0.7.0", default-features = false }
regex = { version = "1.10.2", default-features = false, features = ["unicode"] }
strum_macros = "0.26.4"
