[package]
name = "copymanga"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
opt-level = "s"
strip = true
lto = true

[dependencies]
aes = "0.8.3"
aidoku = { git = "https://github.com/Aidoku/aidoku-rs", features = ["helpers"] }
cbc = "0.1.2"
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
uuid = { version = "1.4.1", default-features = false }
