[package]
name = "firstkissmanga"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
aidoku = { git = "https://github.com/Aidoku/aidoku-rs/", features = ["helpers"] }
base64 = { version = "0.21.4", default-features = false, features = ["alloc"] }
madara_template = { path = "../../template" }
